<resources>
    <string name="app_name">OAuth</string>
    <string name="sign_up_text">Don\'t have an account? <b>Sign up</b></string>
    <string name="e_mail_address">E-mail address</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="scan_code">Scan Code</string>
</resources>